--- a/wayland-scanner/Cargo.toml
+++ b/wayland-scanner/Cargo.toml
@@ -19,6 +19,8 @@ proc-macro = true
 proc-macro2 = "1.0.11"
 quote = "1.0"
 quick-xml = "0.28"
+strum = "0.11.0"
+strum_macros = "0.11.0"
 
 [dev-dependencies]
 similar = "2"
